# Wgx

./: .c4droid  .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: audio-references.txt  noise-types.txt  rex.txt  wgx_todo.txt
scripts/: .c4droid  Blah.wgx  CyberWaitingLobby.wgx  DoomMachine1.wgx  MemoriesOfGreen.wgx  SoundEffect.wgx  VolcanicTrek.wgx  a.wgx  b.wgx  bad.wgx  ex.gx  ex.wgx  ex.wx  ex2.wgx  mainargs.txt
scripts/genlang1/: chrono1_gx.txt  drift1_gx.txt  driftchoir.txt  dumb_gx.txt  par1_gx.txt
scripts/genlang2/: ex.gx  ex.wx
scripts/wavelang2/: chrono1_wx.txt  drift1_wx.txt  driftdumb_wx.txt  dumb_wx.txt  freeverb_effects_wx.txt  freeverb_wx.txt  harpsi-dumb_wx.txt  violin_wx.txt
src/: .c4droid  main.cpp
src/Common/: All.hpp  Capacities.hpp  Crash.hpp  Keywords.hpp  Log.cpp  Log.hpp  Minmax.hpp  SampleRate.hpp
src/Egg/: EventInfo.hpp  IEgg.hpp
src/Egglang/: .c4droid  ActionSpecies.cpp  ActionSpecies.hpp  CMakeLists.txt  EggExceptions.hpp  EggForkerSpecies.hpp  EggSpecies.hpp  Egglang.cpp  Egglang.hpp  EgglangFunctions.hpp  EgglangSynthesizer.cpp  EgglangSynthesizer.hpp  IEggForker.cpp  IEggForker.hpp
src/Egglang/Tests/: CMakeLists.txt  utmain.cpp
src/Expr/: EquationSet.cpp  EquationSet.hpp  Rex.cpp  Rex.hpp  RexProcessContext.cpp  RexProcessContext.hpp  RexSpecies.cpp  RexSpecies.hpp
src/Genlang/: .c4droid  ActionSpecies.cpp  ActionSpecies.hpp  CMakeLists.txt  EggForkerSpecies.hpp  EggSpecies.hpp  GenLang.cpp  GenLang.hpp  GenlangFunctions.hpp  GenlangSynthesizer.cpp  GenlangSynthesizer.hpp  IEggForker.cpp  IEggForker.hpp
src/Genlang/Tests/: .c4droid  eggeq.txt  utmain.cpp
src/Jurassic/: CrealpNamer.hpp  IJurassicSynthElement.cpp  IJurassicSynthElement.hpp  ITrex.cpp  ITrex.hpp  JurassicEffect.cpp  JurassicEffect.hpp  JurassicUniverse.cpp  JurassicUniverse.hpp  JurassicVoice.cpp  JurassicVoice.hpp  RealFunc.cpp  RealFunc.hpp  Realp.hpp  RealpMap.cpp  RealpMap.hpp  ValuesBank.cpp  ValuesBank.hpp  ValuesSets.cpp  ValuesSets.hpp
src/Parsing/: CharFunctions.cpp  CharFunctions.hpp  Language.cpp  Language.hpp  LanguagePair.cpp  LanguagePair.hpp  ParseTree.cpp  ParseTree.hpp  Parser.cpp  Parser.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  TransMatrix.cpp  TransMatrix.hpp  Traverser.cpp  Traverser.hpp  TypeDefs.hpp  Value.hpp
src/Playback/: .c4droid  Symphony.cpp  Symphony.hpp  WavFileWriter.cpp  WavFileWriter.hpp  WavHeader.cpp  WavHeader.hpp  WavSoundStream.cpp  WavSoundStream.hpp
src/Util/: BezierCurves.hpp  FastArray.hpp  TextFileReader.cpp  TextFileReader.hpp  Workforce.hpp
src/Wave/: GradientsProcessor.cpp  GradientsProcessor.hpp  IEffect.hpp  ISynthesizer.hpp  IVoice.hpp  IWaveSampler.hpp  StaticBezierSpec.hpp  Synthesizer.cpp  Synthesizer.hpp
src/Wavelang/: .c4droid  BezierPointSpec.hpp  CrealpNamer.hpp  IJurassicSynthElement.cpp  IJurassicSynthElement.hpp  ITrex.cpp  ITrex.hpp  JurassicEffect.cpp  JurassicEffect.hpp  JurassicUniverse.cpp  JurassicUniverse.hpp  JurassicVoice.cpp  JurassicVoice.hpp  JurassicWorld.cpp  JurassicWorld.hpp  RealpMap.cpp  RealpMap.hpp  Rex.cpp  Rex.hpp  TrexSpecies.hpp  TrexSpeciesEffects.hpp  ValuesSets.cpp  ValuesSets.hpp  WaveLang.cpp  WaveLang.hpp  WavelangFunctions.hpp
src/Wavelang/Tests/: .c4droid  CMakeLists.txt  utmain.cpp  voicechk.txt
todo/: MelodyInject.txt  Tokenizer.txt  genlang_1.txt  genlang_2.txt  genlang_3.txt  genlang_future.txt  wavelang_1.txt  wavelang_2.txt  wavelang_3.txt
